# TDSControl-examples

./: CMakeLists.txt  README.md
cpp/include/tdsreader/: reader.hpp  system.hpp
cpp/src/: reader.cpp  system.cpp  utility.cpp  utility.hpp
data/VerheydenEtAl2008/: A_0  A_1  hA
data/WuMichiels2012/: A_0  A_1  A_2  A_3  hA
